# theone

./: .gitignore  1781098912759_00_BACKUP_MANIFEST.md  1781098912760_01_SCAN_REPORT.md  1781098912760_02_DUPLICATION_REPORT.md  1781098912760_03_CONFLICT_REPORT.md  1781098912760_04_CANONICAL_STATUS.md  1781098912761_05_ARCHIVE_MAP.md  1781098912761_06_FINAL_CLEAN_MASTER.md  1781098912761_07_CODE_AGENT_START_PACKAGE.md  1781098912761_08_CLAUDE_CODE_IMPLEMENTATION_BRIEF.md  1781098912761_09_AUDIT_AND_FULL_PANORAMA.md  1781098912761_10_COMPARISON_PANORAMA.md  1781098912762_README_索引.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
demo/omega_pwa/: index.html  manifest.webmanifest  sw.js
demo/one_universal/: index.html  manifest.webmanifest  sw.js
docs/: 00_FROZEN_REGISTRY.md  BEAUTIFUL_FAILURES.md  NEXT_FRONTIER_causal_discovery.md  PAPER_SKELETON.md  SESSION_DIGEST_2026-06-13.md
docs/audits/: F1_FIX_REPORT.md  README.md
docs/blueprint/: index.html
docs/charter/: 16_THE_ONE_FOUNDING_CHARTER.md
docs/handover/: CC_HANDOVER_FULL.md
docs/luoshu/: LUOSHU_REPORT_FOR_EXPERT.md  RESPONSE_TO_HE_TEACHER.md  VERDICT_HE_CARDS.md
docs/questions_for_jack/: QUEUE.md
docs/taskbatches/: CC_TASKBATCH_01.md
docs/vision/: MASTER_BLUEPRINT_AND_WORKFLOW.md  NEXT_GEN_ARCHITECTURE_REVIEW.md  (+4 more)
ops/: key_sentry.py
tests/: test_confounding_regression.py  test_credential.py  test_engine_stress.py  test_estimators.py  test_experiment.py  test_hybrid.py  test_identify_extended.py  test_llm.py  test_oracle_pgmpy.py  test_retrieval.py  test_suite.py
(+151 files in other folders)
