[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "theone"
version = "0.1.0"
description = "The One: an open cognitive layer for LLMs - explicit causal reasoning, memory, metacognition, verifiable credentials."
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = ["numpy>=1.24", "networkx>=3.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[project.scripts]
theone = "theone.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
